# wagmi

./: .gitignore  Cargo.toml  README.md  bench.md  planned_instructions.txt  rustfmt.toml
benches/: coremark.rs
src/: byte_iter.rs  error.rs  error_msg.rs  instance.rs  interpreter.rs  leb128.rs  lib.rs  main.rs  module.rs  opcodes.rs  signature.rs  spec.rs  specs.rs  validator.rs  wasm_memory.rs
tests/: spec_tests.rs  wast2json
tools/: wat2wasm
