[package]
name = "wagmi"
version = "0.1.0"
edition = "2021"

[features]
wasm_debug = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
paste = "1.0.15"
clap = { version = "4", features = ["derive"] }
nohash-hasher = "0.2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
overflow-checks = false

[[bin]]
name = "wagmi-run"
path = "src/bin/wagmi_run.rs"

[[bin]]
name = "wagmi-inspect"
path = "src/bin/wagmi_inspect.rs"

[[bin]]
name = "wagmi-validate"
path = "src/bin/wagmi_validate.rs"

[[bin]]
name = "wagmi-example-basic"
path = "src/bin/wagmi_example_basic.rs"

[[bin]]
name = "wagmi-example-host"
path = "src/bin/wagmi_example_host.rs"